Changes in structure

--- a/scr/Analysis.ipynb
+++ b/scr/Analysis.ipynb
@@ -21,14 +21,22 @@
     "  - [Packages](#packages)\n",
     "- [1-Data Exploration](#1-data-exploration)\n",
     "- [2-Data Preprocessing](#2-data-preprocessing)\n",
-    "- [3-Analyses](#3-analyses)\n",
-    "  - [In Depth Exploratory Data Analysis](#in-depth-exploratory-data-analysis)\n",
-    "  - [Attrition Analysis](#attrition-analysis)\n",
-    "  - [Compliance Analysis](#compliance-analysis)\n",
-    "  - [Data Imputation](#data-imputation)\n",
-    "  - [Model](#model)\n",
-    "  - [Assumptions](#assumptions)\n",
-    "- [4-General Conclusion](#3-general-conclusion)"
+    "- [3-Analyses - ITT](#3-analyses)\n",
+    "  - [In Depth Exploratory Data Analysis]\n",
+    "  - [Attrition Analysis]\n",
+    "  - [Compliance Analysis]\n",
+    "  - [Data Imputation]\n",
+    "  - [Statistical Model]\n",
+    "  - [Assumptions]\n",
+    "- [4-Analyses - PP]\n",
+    "  - [In Depth Exploratory Data Analysis]\n",
+    "  - [Attrition Analysis]\n",
+    "  - [Compliance Analysis]\n",
+    "  - [Data Imputation]\n",
+    "  - [Statistical Model]\n",
+    "  - [Assumptions]\n",
+    "- [5-Sensitivity Analysis]\n",
+    "- [6-General Conclusion]"
    ]
   },
   {
@@ -37,7 +45,7 @@
    "source": [
     "# 0-General\n",
     "[Back to Table of Content](#table-of-content)\n",
-    "# Exploring the Impact of Kneipp Concept on Kindergarten Children's Health"
+    "# Exploring the Effects of Hypnotherapy and Aromatherapy via MindspaceOne"
    ]
   },
   {
@@ -47,7 +55,9 @@
     "## Introduction\n",
     "[Back to Table of Content](#table-of-content)\n",
     "\n",
-    "The Kneipp concept, deeply rooted in Europeans tradition, emphasises holistic health and wellness through five key elements: cold water applications, exerceise, nutrition, herbs, and life balance. While \"Kneipp Kindergartens\" in Germany and surrounding areas regularyly practice Kneipp applications and activities, the specific health benefits for children remain relatively unexplored."
+    "The **MindspaceOne** project investigates the effects of combining hypnotherapy and aromatherapy, delivered via a smartphone-based platform, on individuals' ability to achieve targeted states of relaxation or concentration. As modern life grows increasingly stressful, particularly among younger individuals, there is a pressing need for accessible interventions to support mental health and well-being. This project seeks to evaluate whether coupling hypnotherapy with aromatherapy through classical conditioning can enhance the effectiveness of these interventions.\n",
+    "\n",
+    "In this controlled, randomized experimental pilot study, participants are assigned to one of four groups: (I) Hypnotherapy + Aromatherapy, (II) Hypnotherapy alone, (III) Aromatherapy alone, or (IV) a control group. Over a 4-week period, participants will engage with the assigned treatment daily, followed by a 1-week test phase for conditioning effects in selected groups."
    ]
   },
   {
@@ -57,12 +67,15 @@
     "## Objective\n",
     "[Back to Table of Content](#table-of-content)\n",
     "\n",
-    "Our primary objective is to examine the impact of implementing a child-friendly Kneipp concept in kindergartens on children's resilience and incidence of infection-related absenteeism over a 12-month period.\n",
+    "The primary objective of this study is to assess whether daily hypnotherapy sessions, with or without aromatherapy, can improve participants' relaxation and concentration as measured by the **Multidimensional Mood Questionnaire (MDBF)** subscales. Secondary objectives include evaluating whether the effects of hypnotherapy can be conditioned to aromatherapy and exploring the influence of other variables such as age, gender, and stress levels.\n",
     "\n",
-    "Hypotheses:\n",
-    "*Primary Efficacy Hypothesis (Infection Days)*\n",
-    "- Null Hypothesis (H0): Implementation of a child-friendly Kneipp concept does not significantly improve resilience, as indicated by a reduction in infection-related absenteeism after 12 months.\n",
-    "- Alternative Hypothesis (H1): Implementation of a child-friendly Kneipp concept leads to a significant improvement in resilience, evidenced by a reduction in infection-related absenteeism after 12 months."
+    "## Hypotheses\n",
+    "#### Primary Hypothesis (H1):\n",
+    "- Hypnotherapy, delivered via a smartphone-based platform, enhances relaxation and concentration, as indicated by improvements on the MDBF subscales (calculated as the change from baseline to the end of the 4-week intervention).\n",
+    "\n",
+    "#### Secondary Hypotheses:\n",
+    "1. Aromatherapy combined with hypnotherapy enhances the conditioning effect, where aromatherapy alone can trigger the same relaxation or concentration effects as hypnotherapy.\n",
+    "2. Exploratory analysis will examine the effects on perceived stress (PSS) and well-being (WHO-5), as well as the moderating role of age, gender, and socioeconomic status.\n"
    ]
   },
   {
@@ -72,12 +85,12 @@
     "## Analysis steps\n",
     "[Back to Table of Content](#table-of-content)\n",
     "\n",
-    "1. **In-Depth Exploratory Data Analysis:** This step involves a detailed examination of the dataset to understand its structure, distribution of key variables, and any potential patterns or relationships within the data. It includes assessing the presence of outliers, visualizing the data through plots or charts, and performing summary statistics to gain insights into the characteristics of the population. The goal is to ensure a thorough understanding of the data before proceeding to more complex analyses.\n",
-    "2. **Attrition Analysis:** Attrition analysis focuses on understanding and evaluating the dropout rates in the study. This involves identifying which participants were lost during the study period and assessing whether this attrition may introduce bias into the results. By examining patterns in the missing data (e.g., whether certain groups or characteristics are associated with higher dropout rates), this analysis ensures that the study's results remain valid and generalizable, despite missing data.\n",
-    "3. **Compliance Analysis:** Compliance analysis assesses the extent to which participants adhered to the intervention or treatment protocols during the study. This includes determining how many participants followed the intended treatment regimen and identifying those who deviated from it. Understanding compliance is critical, as it allows researchers to determine whether the results reflect the effects of the intervention itself or are influenced by differing levels of adherence among participants.\n",
-    "4. **Data Imputation:** Data imputation addresses missing values in the dataset by estimating and filling in these gaps. In this case, multiple imputation is used to generate several complete datasets, which are then analyzed and pooled together to ensure that missing data do not bias the results. This step ensures that the analysis can proceed without being distorted by missing information and maintains the statistical power of the study.\n",
-    "5. **Model:** This step involves fitting the appropriate statistical model to the data. In this case, a negative binomial regression model is used to analyze count data (e.g., the number of sick days) while accounting for overdispersion. The model is designed to predict the outcome of interest based on the intervention and other covariates while controlling for random effects, such as differences between clusters or kindergartens\n",
-    "6. **Assumptions:** Testing the assumptions of the statistical model is essential to validate its use. For the negative binomial regression model, this includes checking for overdispersion, ensuring the residuals are properly distributed (no systematic patterns), and testing for zero inflation. This step ensures that the model is appropriate for the data and that the results of the analysis are reliable and interpretable."
+    "1. **In-Depth Exploratory Data Analysis:** Examine the structure and distribution of data. Identify outliers and assess relationships between variables. Visualize data for key insights.\n",
+    "2. **Attrition Analysis:** Assess dropout patterns and identify potential biases due to participant attrition.\n",
+    "3. **Compliance Analysis:** Evaluate adherence to the intervention protocols across groups to determine the consistency of treatments.\n",
+    "4. **Data Imputation:** Address missing data through multiple imputation techniques, ensuring robust statistical analysis.\n",
+    "5. **Model:** Fit a mixed effects model to evaluate changes over time and between groups for primary and secondary outcomes. Test for differences between groups using inferential statistics.\n",
+    "6. **Assumptions:** Validate statistical assumptions, including normality of residuals, homogeneity of variances, and absence of significant outliers."
    ]
   },
   {
@@ -87,24 +100,17 @@
     "## Data Dictionary\n",
     "[Back to Table of Content](#table-of-content)\n",
     "\n",
-    "| Variable              | Description                                                    | Data Type |\n",
-    "|-----------------------|----------------------------------------------------------------|-----------|\n",
-    "| Child_ID              | Identifier for each child.                                     | Character (chr) |\n",
-    "| Assessment            | Indicates the assessment number.                               | Numeric (dbl) |\n",
-    "| kindergarten_ID       | Identifier for the kindergarten the child attends.             | Character (chr) |\n",
-    "| sickday_week1_day1    | Presence or sickness or absence of the child on week 1, day 1. | Character (chr) |\n",
-    "| sickday_week1_day2    | Presence or sickness or absence of the child on week 1, day 2. | Character (chr) |\n",
-    "| sickday_week1_day3    | Presence or sickness or absence of the child on week 1, day 3. | Character (chr) |\n",
-    "| sickday_week1_day4    | Presence or sickness or absence of the child on week 1, day 4. | Character (chr) |\n",
-    "| sickday_week1_day5    | Presence or sickness or absence of the child on week 1, day 5. | Character (chr) |\n",
-    "| sickday_week2_day1    | Presence or sickness or absence of the child on week 2, day 1. | Character (chr) |\n",
-    "| sickday_week2_day2    | Presence or sickness or absence of the child on week 2, day 2. | Character (chr) |\n",
-    "| ...                   | ...                                                            | ...       |\n",
-    "| sickday_week6_day1    | Presence or sickness or absence of the child on week 6, day 1. | Character (chr) |\n",
-    "| sickday_week6_day2    | Presence or sickness or absence of the child on week 6, day 2. | Character (chr) |\n",
-    "| sickday_week6_day3    | Presence or sickness or absence of the child on week 6, day 3. | Character (chr) |\n",
-    "| sickday_week6_day4    | Presence or sickness or absence of the child on week 6, day 4. | Character (chr) |\n",
-    "| sickday_week6_day5    | Presence or sickness or absence of the child on week 6, day 5. | Character (chr) |"
+    "| Variable              | Description                                             | Data Type   |\n",
+    "|-----------------------|---------------------------------------------------------|-------------|\n",
+    "| Participant_ID        | Unique identifier for each participant                  | Character   |\n",
+    "| Group                 | Assigned intervention group (I, II, III, IV)            | Character   |\n",
+    "| V0_MDBF_WM            | Baseline score for Wakefulness-Fatigue (MDBF subscale)  | Numeric     |\n",
+    "| V0_MDBF_RU            | Baseline score for Calmness-Restlessness (MDBF subscale)| Numeric     |\n",
+    "| Daily_Session_Usage   | Count of sessions completed daily                       | Numeric     |\n",
+    "| Aroma_Used            | Binary indicator for aromatherapy use (1 = Yes, 0 = No)| Binary      |\n",
+    "| VAS_Preload_Relax     | Pre-treatment relaxation score (Visual Analog Scale)    | Numeric     |\n",
+    "| VAS_Postload_Relax    | Post-treatment relaxation score (Visual Analog Scale)   | Numeric     |\n",
+    "| ...                   | ...                                                     | ...         |"
    ]
   },
   {
@@ -114,7 +120,7 @@
     "## Acknowledgements\n",
     "[Back to Table of Content](#table-of-content)\n",
     "\n",
-    "We extended our gratitude to the entire research group of [Prof. Dr. med. Seifert](https://kinderonkologie.charite.de/forschung/ag_seifert/team/) and all participating kindergartens and participants for their invalubale contributions to this study as well as thanks to the funding agencies. Statistical analysis was conducted by Dr. Steven Schepanski, who also oversaw this notebook."
+    "We extended our gratitude to Priv.-Doz. Dr. Michael Teut for his invaluable contribution to the execution of this study. We also express gratitude to the entire research group of [Prof. Dr. med. Seifert](https://kinderonkologie.charite.de/forschung/ag_seifert/team/) and all participating kindergartens and participants for their invalubale contributions to this study as well as thanks to the funding agencies. Statistical analysis was conducted by Dr. Steven Schepanski, who also oversaw this notebook.\n"
    ]
   },
   {
